# process_check_app

./: __main__.py  pyproject.toml  streamlit_app.py
assets/: AI_Verify_Testing_Framework_April_2025.xlsx  reference.xlsx  sample_report.json
assets/references/: aivtf-excel.xlsx  map.json
backend/: map.py  pdf_generator.py  principle_calculator.py  spreadsheet.py  workspace.py
backend/actions_components/: actions_component.py  index.html
backend/cards_component/: cards_component.py
backend/schema/: ms_v1_schema.py
frontend/: generate_report.py  get_started.py  process_check.py  triage.py  upload_result.py  welcome.py
frontend/styles/: get_started_styles.py  process_check_styles.py  welcome_styles.py
