[project]
name = "process-check-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Lionel Teo",email = "lionel_teo@imda.gov.sg"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.45.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "bleach (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false